--- a/0 день скрипты/scripts.ipynb
+++ b/0 день скрипты/scripts.ipynb
@@ -49,6 +49,356 @@
    "cell_type": "markdown",
    "id": "94d3b442",
    "metadata": {},
+   "source": [
+    "# 🔹 Настройка оборудования \n",
+    "\n",
+    "Проверим ОС\n",
+    "\n",
+    "```bash\n",
+    "uname -a\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 1. Обновление системы \n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "sudo apt upgrade -y\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 2. Базовые пакеты \n",
+    "\n",
+    "```bash\n",
+    "sudo apt install -y \\\n",
+    "  curl \\\n",
+    "  wget \\\n",
+    "  git \\\n",
+    "  build-essential \\\n",
+    "  ca-certificates \\\n",
+    "  software-properties-common\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 3. Установка Python \n",
+    "\n",
+    "Проверка:\n",
+    "\n",
+    "```bash\n",
+    "python3 --version\n",
+    "```\n",
+    "\n",
+    "Если **не найден**:\n",
+    "\n",
+    "```bash\n",
+    "sudo apt install -y python3 python3-pip python3-venv\n",
+    "```\n",
+    "\n",
+    "Проверка:\n",
+    "\n",
+    "```bash\n",
+    "python3 --version\n",
+    "pip3 --version\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 4. Установка VS Code\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg\n",
+    "sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/\n",
+    "\n",
+    "sudo sh -c 'echo \"deb [arch=amd64] https://packages.microsoft.com/repos/code stable main\" > /etc/apt/sources.list.d/vscode.list'\n",
+    "\n",
+    "sudo apt update\n",
+    "sudo apt install -y code\n",
+    "```\n",
+    "\n",
+    "Запуск:\n",
+    "\n",
+    "```bash\n",
+    "code\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 5. Расширения VS Code \n",
+    "\n",
+    "В VS Code → **Ctrl+Shift+X**, установить:\n",
+    "\n",
+    "* **Python** (Microsoft)\n",
+    "* **Pylance**\n",
+    "* **Jupyter**\n",
+    "* **Jupyter Notebook Renderers**\n",
+    "* **Docker** (Microsoft)\n",
+    "* **YAML**\n",
+    "\n",
+    "Перезапусти VS Code.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 6. Создание проекта и виртуального окружения \n",
+    "\n",
+    "```bash\n",
+    "mkdir Rea\n",
+    "cd Rea\n",
+    "```\n",
+    "\n",
+    "Создаём виртуальное окружение:\n",
+    "\n",
+    "```bash\n",
+    "python3 -m venv rea\n",
+    "```\n",
+    "\n",
+    "Активируем:\n",
+    "\n",
+    "```bash\n",
+    "source rea/bin/activate\n",
+    "```\n",
+    "\n",
+    "Если видим:\n",
+    "\n",
+    "```text\n",
+    "(rea) user@pc:~/Rea$\n",
+    "```\n",
+    "\n",
+    "то ок \n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 7. Обновление pip внутри rea\n",
+    "\n",
+    "```bash\n",
+    "pip install --upgrade pip\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 8. Установка Jupyter и регистрация ядра\n",
+    "\n",
+    "```bash\n",
+    "pip install jupyter notebook ipykernel\n",
+    "```\n",
+    "\n",
+    "```bash\n",
+    "python -m ipykernel install --user --name=rea --display-name \"Python (rea)\"\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 9. Установка нужных в перспективе  библиотек \n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "pip install \\\n",
+    "numpy \\\n",
+    "pandas \\\n",
+    "scipy \\\n",
+    "scikit-learn \\\n",
+    "matplotlib \\\n",
+    "seaborn \\\n",
+    "plotly \\\n",
+    "statsmodels \\\n",
+    "xgboost \\\n",
+    "lightgbm \\\n",
+    "catboost \\\n",
+    "imbalanced-learn \\\n",
+    "optuna \\\n",
+    "shap \\\n",
+    "tqdm \\\n",
+    "joblib \\\n",
+    "pyarrow \\\n",
+    "openpyxl \\\n",
+    "xlrd \\\n",
+    "pillow \\\n",
+    "opencv-python \\\n",
+    "albumentations \\\n",
+    "imageio \\\n",
+    "librosa \\\n",
+    "soundfile \\\n",
+    "torch \\\n",
+    "torchvision \\\n",
+    "torchaudio \\\n",
+    "tensorflow \\\n",
+    "keras \\\n",
+    "transformers \\\n",
+    "datasets \\\n",
+    "evaluate \\\n",
+    "accelerate \\\n",
+    "spacy \\\n",
+    "nltk \\\n",
+    "gensim \\\n",
+    "fasttext \\\n",
+    "sentencepiece \\\n",
+    "torchmetrics \\\n",
+    "pytorch-lightning \\\n",
+    "onnx \\\n",
+    "onnxruntime \\\n",
+    "wandb \\\n",
+    "mlflow\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# НА ПОТОМ: \n",
+    "\n",
+    "# 11. Установка Docker \n",
+    "\n",
+    "## 11.1 Удаляем старый мусор\n",
+    "\n",
+    "```bash\n",
+    "sudo apt remove -y docker docker-engine docker.io containerd runc\n",
+    "```\n",
+    "\n",
+    "## 11.2 Добавляем репозиторий Docker\n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "sudo apt install -y ca-certificates curl gnupg\n",
+    "\n",
+    "sudo install -m 0755 -d /etc/apt/keyrings\n",
+    "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\n",
+    "\n",
+    "echo \\\n",
+    "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \\\n",
+    "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\n",
+    "  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
+    "```\n",
+    "\n",
+    "## 11.3 Установка Docker\n",
+    "\n",
+    "```bash\n",
+    "sudo apt update\n",
+    "sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\n",
+    "```\n",
+    "\n",
+    "## 11.4 Запуск и автозапуск\n",
+    "\n",
+    "```bash\n",
+    "sudo systemctl enable docker\n",
+    "sudo systemctl start docker\n",
+    "```\n",
+    "\n",
+    "## 11.5 Docker без sudo\n",
+    "\n",
+    "```bash\n",
+    "sudo usermod -aG docker $USER\n",
+    "```\n",
+    "\n",
+    " **Выйnb из системы и зайnb снова**, иначе группа не применится.\n",
+    "\n",
+    "Проверка:\n",
+    "\n",
+    "```bash\n",
+    "docker run hello-world\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 12. Установка Apache Airflow \n",
+    "\n",
+    "\n",
+    "## 12.1 Создаём папку под Airflow\n",
+    "\n",
+    "```bash\n",
+    "mkdir airflow\n",
+    "cd airflow\n",
+    "```\n",
+    "\n",
+    "## 12.2 Загружаем официальный docker-compose\n",
+    "\n",
+    "```bash\n",
+    "curl -LfO 'https://airflow.apache.org/docs/apache-airflow/stable/docker-compose.yaml'\n",
+    "```\n",
+    "\n",
+    "## 12.3 Создаём необходимые папки\n",
+    "\n",
+    "```bash\n",
+    "mkdir -p ./dags ./logs ./plugins\n",
+    "```\n",
+    "\n",
+    "## 12.4 Инициализация Airflow\n",
+    "\n",
+    "```bash\n",
+    "docker compose up airflow-init\n",
+    "```\n",
+    "\n",
+    "## 12.5 Запуск Airflow\n",
+    "\n",
+    "```bash\n",
+    "docker compose up -d\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 13. Вход в Airflow\n",
+    "\n",
+    "Открsnm браузер:\n",
+    "\n",
+    "```\n",
+    "http://localhost:8080\n",
+    "```\n",
+    "\n",
+    "Логин:\n",
+    "\n",
+    "```\n",
+    "airflow\n",
+    "```\n",
+    "\n",
+    "Пароль:\n",
+    "\n",
+    "```\n",
+    "airflow\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 14. Запуск VS Code с проектом\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea\n",
+    "source rea/bin/activate\n",
+    "code .\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 15. Работа с Jupyter в VS Code\n",
+    "\n",
+    "* `Ctrl+Shift+P`\n",
+    "* `Jupyter: Create New Blank Notebook`\n",
+    "* Kernel → **Python (rea)**\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# 16. Как это всё запускать потом \n",
+    "\n",
+    "### Airflow:\n",
+    "\n",
+    "```bash\n",
+    "cd Rea/airflow\n",
+    "docker compose up -d\n",
+    "```\n",
+    "\n",
+    "### Остановить Airflow:\n",
+    "\n",
+    "```bash\n",
+    "docker compose down\n",
+    "```\n",
+    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5aa6db7c",
+   "metadata": {},
    "source": []
   }
  ],
