--- a/0 день скрипты/scripts.ipynb
+++ b/0 день скрипты/scripts.ipynb
@@ -47,29 +47,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0020230c",
+   "metadata": {},
+   "source": [
+    "# 🔹 Установка день 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94d3b442",
    "metadata": {},
    "source": [
-    "# 🔹 Настройка оборудования \n",
+    "# 0. Базовая информация и проверки\n",
     "\n",
-    "Проверим ОС\n",
+    "Проверка ОС, ядра и системных ресурсов:\n",
     "\n",
     "```bash\n",
     "uname -a\n",
+    "lsb_release -a  # если есть\n",
+    "df -h /        # свободное место на корневом разделе\n",
+    "free -h        # RAM\n",
+    "nvidia-smi     # если есть GPU NVIDIA\n",
     "```\n",
     "\n",
-    "---\n",
+    "Проверка интернета:\n",
     "\n",
-    "# 1. Обновление системы \n",
+    "```bash\n",
+    "ping -c 3 google.com\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 1. Обновление системы\n",
     "\n",
     "```bash\n",
     "sudo apt update\n",
     "sudo apt upgrade -y\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 2. Базовые пакеты \n",
+    "# 2. Базовые пакеты\n",
     "\n",
     "```bash\n",
     "sudo apt install -y \\\n",
@@ -78,12 +96,18 @@
     "  git \\\n",
     "  build-essential \\\n",
     "  ca-certificates \\\n",
-    "  software-properties-common\n",
+    "  software-properties-common \\\n",
+    "  gnupg \\\n",
+    "  unzip \\\n",
+    "  htop \\\n",
+    "  tree\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 3. Установка Python \n",
+    "***\n",
+    "\n",
+    "# 3. Установка Python\n",
     "\n",
     "Проверка:\n",
     "\n",
@@ -91,7 +115,7 @@
     "python3 --version\n",
     "```\n",
     "\n",
-    "Если **не найден**:\n",
+    "Если Python3 не установлен:\n",
     "\n",
     "```bash\n",
     "sudo apt install -y python3 python3-pip python3-venv\n",
@@ -104,16 +128,17 @@
     "pip3 --version\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
     "# 4. Установка VS Code\n",
     "\n",
-    "\n",
     "```bash\n",
-    "wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg\n",
-    "sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/\n",
+    "wget -qO- https://packages.microsoft.com/keys/microsoft.asc \\\n",
+    "  | sudo gpg --dearmor \\\n",
+    "  > /usr/share/keyrings/microsoft-archive-keyring.gpg\n",
     "\n",
-    "sudo sh -c 'echo \"deb [arch=amd64] https://packages.microsoft.com/repos/code stable main\" > /etc/apt/sources.list.d/vscode.list'\n",
+    "echo \"deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/microsoft-archive-keyring.gpg] https://packages.microsoft.com/repos/code stable main\" \\\n",
+    "  | sudo tee /etc/apt/sources.list.d/vscode.list\n",
     "\n",
     "sudo apt update\n",
     "sudo apt install -y code\n",
@@ -125,172 +150,337 @@
     "code\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 5. Расширения VS Code \n",
+    "# 5. Расширения VS Code\n",
     "\n",
-    "В VS Code → **Ctrl+Shift+X**, установить:\n",
+    "В VS Code:\n",
     "\n",
-    "* **Python** (Microsoft)\n",
-    "* **Pylance**\n",
-    "* **Jupyter**\n",
-    "* **Jupyter Notebook Renderers**\n",
-    "* **Docker** (Microsoft)\n",
-    "* **YAML**\n",
+    "- `Ctrl+Shift+X` → установить:\n",
+    "  - Python (Microsoft)\n",
+    "  - Pylance\n",
+    "  - Jupyter\n",
+    "  - Jupyter Notebook Renderers\n",
+    "  - Docker (Microsoft)\n",
+    "  - YAML\n",
     "\n",
     "Перезапусти VS Code.\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 6. Создание проекта и виртуального окружения \n",
+    "# 6. Структура проекта и репозиторий в vs code\n",
+    "\n",
+    "Создаём корневую папку:\n",
     "\n",
     "```bash\n",
-    "mkdir Rea\n",
-    "cd Rea\n",
+    "mkdir -p ~/Rea\n",
+    "cd ~/Rea\n",
     "```\n",
     "\n",
-    "Создаём виртуальное окружение:\n",
+    "Инициализация Git в vs code:\n",
     "\n",
     "```bash\n",
+    "# Проверяем, что мы в Rea\n",
+    "pwd\n",
+    "\n",
+    "git init\n",
+    "git remote add origin https://github.com/твойusername/Rea.git\n",
+    "git add .\n",
+    "git commit -m \"что-то\"\n",
+    "git branch -M main\n",
+    "git push -u origin main\n",
+    "\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 7. Общее Python‑окружение `rea`\n",
+    "\n",
+    "Создание:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea\n",
     "python3 -m venv rea\n",
-    "```\n",
-    "\n",
-    "Активируем:\n",
-    "\n",
-    "```bash\n",
     "source rea/bin/activate\n",
     "```\n",
     "\n",
-    "Если видим:\n",
+    "Проверка:\n",
     "\n",
-    "```text\n",
-    "(rea) user@pc:~/Rea$\n",
+    "```bash\n",
+    "python -V\n",
+    "pip -V\n",
     "```\n",
     "\n",
-    "то ок \n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 7. Обновление pip внутри rea\n",
+    "Обновление pip:\n",
     "\n",
     "```bash\n",
     "pip install --upgrade pip\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 8. Установка Jupyter и регистрация ядра\n",
+    "# 8. Jupyter и ядро для VS Code\n",
     "\n",
     "```bash\n",
     "pip install jupyter notebook ipykernel\n",
-    "```\n",
-    "\n",
-    "```bash\n",
     "python -m ipykernel install --user --name=rea --display-name \"Python (rea)\"\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 9. Установка нужных в перспективе  библиотек \n",
+    "# 9. requirements.txt для общего окружения\n",
+    "\n",
+    "В `~/Rea`:\n",
+    "\n",
+    "```bash\n",
+    "cat > requirements.txt << 'EOF'\n",
+    "numpy<2.0\n",
+    "pandas>=2.0\n",
+    "scipy>=1.10\n",
+    "scikit-learn>=1.3\n",
+    "matplotlib>=3.7\n",
+    "seaborn>=0.12\n",
+    "plotly\n",
+    "statsmodels\n",
+    "xgboost\n",
+    "lightgbm\n",
+    "catboost\n",
+    "imbalanced-learn\n",
+    "optuna\n",
+    "shap\n",
+    "tqdm\n",
+    "joblib\n",
+    "pyarrow\n",
+    "openpyxl\n",
+    "xlrd\n",
+    "pillow\n",
+    "opencv-python-headless\n",
+    "albumentations\n",
+    "imageio\n",
+    "librosa\n",
+    "soundfile\n",
+    "transformers\n",
+    "datasets\n",
+    "evaluate\n",
+    "accelerate\n",
+    "spacy\n",
+    "nltk\n",
+    "gensim\n",
+    "fasttext\n",
+    "sentencepiece\n",
+    "torchmetrics\n",
+    "pytorch-lightning\n",
+    "onnx\n",
+    "onnxruntime\n",
+    "wandb\n",
+    "mlflow\n",
+    "EOF\n",
+    "```\n",
+    "\n",
+    "Установка:\n",
+    "\n",
+    "```bash\n",
+    "pip install -r requirements.txt\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 10. Отдельное окружение для PyTorch\n",
+    "\n",
+    "Создаём venv:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea\n",
+    "python3 -m venv pytorch_env\n",
+    "source pytorch_env/bin/activate\n",
+    "pip install --upgrade pip\n",
+    "```\n",
     "\n",
     "\n",
     "```bash\n",
     "pip install \\\n",
-    "numpy \\\n",
-    "pandas \\\n",
-    "scipy \\\n",
-    "scikit-learn \\\n",
-    "matplotlib \\\n",
-    "seaborn \\\n",
-    "plotly \\\n",
-    "statsmodels \\\n",
-    "xgboost \\\n",
-    "lightgbm \\\n",
-    "catboost \\\n",
-    "imbalanced-learn \\\n",
-    "optuna \\\n",
-    "shap \\\n",
-    "tqdm \\\n",
-    "joblib \\\n",
-    "pyarrow \\\n",
-    "openpyxl \\\n",
-    "xlrd \\\n",
-    "pillow \\\n",
-    "opencv-python \\\n",
-    "albumentations \\\n",
-    "imageio \\\n",
-    "librosa \\\n",
-    "soundfile \\\n",
-    "torch \\\n",
-    "torchvision \\\n",
-    "torchaudio \\\n",
-    "tensorflow \\\n",
-    "keras \\\n",
-    "transformers \\\n",
-    "datasets \\\n",
-    "evaluate \\\n",
-    "accelerate \\\n",
-    "spacy \\\n",
-    "nltk \\\n",
-    "gensim \\\n",
-    "fasttext \\\n",
-    "sentencepiece \\\n",
-    "torchmetrics \\\n",
-    "pytorch-lightning \\\n",
-    "onnx \\\n",
-    "onnxruntime \\\n",
-    "wandb \\\n",
-    "mlflow\n",
+    "  torch \\\n",
+    "  torchvision \\\n",
+    "  torchaudio\n",
     "```\n",
     "\n",
-    "---\n",
+    "Дополнительные полезные вещи для PyTorch/competitions:\n",
     "\n",
-    "# НА ПОТОМ: \n",
+    "```bash\n",
+    "pip install \\\n",
+    "  numpy \\\n",
+    "  pandas \\\n",
+    "  scikit-learn \\\n",
+    "  pillow \\\n",
+    "  opencv-python-headless \\\n",
+    "  albumentations \\\n",
+    "  matplotlib \\\n",
+    "  tqdm \\\n",
+    "  tensorboard \\\n",
+    "  torchmetrics \\\n",
+    "  pytorch-lightning \\\n",
+    "  timm \\\n",
+    "  einops \\\n",
+    "  wandb \\\n",
+    "  mlflow\n",
+    "```\n",
     "\n",
-    "# 11. Установка Docker \n",
     "\n",
-    "## 11.1 Удаляем старый мусор\n",
+    "Деактивация:\n",
+    "\n",
+    "```bash\n",
+    "deactivate\n",
+    "```\n",
+    "\n",
+    "Структура на данный момент:\n",
+    "\n",
+    "```text\n",
+    "~/Rea/\n",
+    "├── rea/           # общее окружение\n",
+    "├── pytorch_env/   # окружение под PyTorch\n",
+    "└── requirements.txt\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 11. Отдельное окружение для TensorFlow\n",
+    "\n",
+    "Создаём venv:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea\n",
+    "python3 -m venv tf_env\n",
+    "source tf_env/bin/activate\n",
+    "pip install --upgrade pip\n",
+    "```\n",
+    "\n",
+    "TensorFlow + Keras:\n",
+    "\n",
+    "```bash\n",
+    "pip install \\\n",
+    "  tensorflow \\\n",
+    "  keras\n",
+    "```\n",
+    "\n",
+    "Доп.пакеты под DL/ML:\n",
+    "\n",
+    "```bash\n",
+    "pip install \\\n",
+    "  numpy \\\n",
+    "  pandas \\\n",
+    "  scikit-learn \\\n",
+    "  matplotlib \\\n",
+    "  seaborn \\\n",
+    "  pillow \\\n",
+    "  opencv-python-headless \\\n",
+    "  albumentations \\\n",
+    "  tqdm \\\n",
+    "  tensorboard \\\n",
+    "  wandb \\\n",
+    "  mlflow\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Деактивация:\n",
+    "\n",
+    "```bash\n",
+    "deactivate\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 12. Использование окружений в проектах\n",
+    "\n",
+    "Примеры:\n",
+    "\n",
+    "- PyTorch‑проект:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea/pytorch_project  \n",
+    "source ~/Rea/pytorch_env/bin/activate\n",
+    "deactivate\n",
+    "```\n",
+    "\n",
+    "- TensorFlow‑проект:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea/tf_project\n",
+    "source ~/Rea/tf_env/bin/activate\n",
+    "deactivate\n",
+    "```\n",
+    "\n",
+    "- Общее окружение:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea\n",
+    "source rea/bin/activate\n",
+    "deactivate\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 13. Альтернатива: Poetry (опционально)\n",
+    "\n",
+    "\n",
+    "```bash\n",
+    "source rea/bin/activate\n",
+    "pip install poetry\n",
+    "cd ~/Rea\n",
+    "poetry init   \n",
+    "poetry add numpy pandas torch\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 14. Установка Docker\n",
+    "\n",
+    "Удаляем старые версии:\n",
     "\n",
     "```bash\n",
     "sudo apt remove -y docker docker-engine docker.io containerd runc\n",
     "```\n",
     "\n",
-    "## 11.2 Добавляем репозиторий Docker\n",
+    "Добавляем репозиторий:\n",
     "\n",
     "```bash\n",
     "sudo apt update\n",
     "sudo apt install -y ca-certificates curl gnupg\n",
     "\n",
     "sudo install -m 0755 -d /etc/apt/keyrings\n",
-    "curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\n",
+    "curl -fsSL https://download.docker.com/linux/ubuntu/gpg \\\n",
+    "  | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\n",
     "\n",
     "echo \\\n",
     "  \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \\\n",
-    "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" | \\\n",
-    "  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
+    "  $(. /etc/os-release && echo \"$VERSION_CODENAME\") stable\" \\\n",
+    "  | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null\n",
     "```\n",
     "\n",
-    "## 11.3 Установка Docker\n",
+    "Установка:\n",
     "\n",
     "```bash\n",
     "sudo apt update\n",
-    "sudo apt install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\n",
+    "sudo apt install -y \\\n",
+    "  docker-ce \\\n",
+    "  docker-ce-cli \\\n",
+    "  containerd.io \\\n",
+    "  docker-buildx-plugin \\\n",
+    "  docker-compose-plugin\n",
     "```\n",
     "\n",
-    "## 11.4 Запуск и автозапуск\n",
+    "Запуск и автозапуск:\n",
     "\n",
     "```bash\n",
     "sudo systemctl enable docker\n",
     "sudo systemctl start docker\n",
     "```\n",
     "\n",
-    "## 11.5 Docker без sudo\n",
+    "Разрешить запуск без `sudo`:\n",
     "\n",
     "```bash\n",
     "sudo usermod -aG docker $USER\n",
+    "# затем перелогиниться или перезайти в сессию\n",
     "```\n",
-    "\n",
-    " **Выйnb из системы и зайnb снова**, иначе группа не применится.\n",
     "\n",
     "Проверка:\n",
     "\n",
@@ -298,67 +488,114 @@
     "docker run hello-world\n",
     "```\n",
     "\n",
-    "---\n",
+    "***\n",
     "\n",
-    "# 12. Установка Apache Airflow \n",
+    "# 15. Docker Compose для Jupyter (опционально)\n",
     "\n",
+    "В `~/Rea` создаём файл `docker-compose.jupyter.yml`:\n",
     "\n",
-    "## 12.1 Создаём папку под Airflow\n",
-    "\n",
-    "```bash\n",
-    "mkdir airflow\n",
-    "cd airflow\n",
+    "```yaml\n",
+    "services:\n",
+    "  jupyter:\n",
+    "    image: jupyter/scipy-notebook:latest\n",
+    "    ports:\n",
+    "      - \"8888:8888\"\n",
+    "    volumes:\n",
+    "      - .:/workspace\n",
     "```\n",
     "\n",
-    "## 12.2 Загружаем официальный docker-compose\n",
+    "Запуск:\n",
+    "\n",
+    "```bash\n",
+    "cd ~/Rea\n",
+    "docker compose -f docker-compose.jupyter.yml up -d\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 16. Установка Apache Airflow (через Docker)\n",
+    "\n",
+    "## 16.1 Папка под Airflow\n",
+    "\n",
+    "```bash\n",
+    "mkdir -p ~/Rea/airflow\n",
+    "cd ~/Rea/airflow\n",
+    "```\n",
+    "\n",
+    "## 16.2 Загрузка docker-compose.yaml\n",
     "\n",
     "```bash\n",
     "curl -LfO 'https://airflow.apache.org/docs/apache-airflow/stable/docker-compose.yaml'\n",
     "```\n",
     "\n",
-    "## 12.3 Создаём необходимые папки\n",
+    "## 16.3 Необходимые папки\n",
     "\n",
     "```bash\n",
     "mkdir -p ./dags ./logs ./plugins\n",
     "```\n",
     "\n",
-    "## 12.4 Инициализация Airflow\n",
+    "## 16.4 Персистентный volume для Postgres\n",
+    "\n",
+    "В `docker-compose.yaml` добавь в конец:\n",
+    "\n",
+    "```yaml\n",
+    "volumes:\n",
+    "  postgres_data:\n",
+    "```\n",
+    "\n",
+    "И в сервисе `postgres` (они есть в шаблоне Airflow) добавим:\n",
+    "\n",
+    "```yaml\n",
+    "    volumes:\n",
+    "      - postgres_data:/var/lib/postgresql/data\n",
+    "```\n",
+    "\n",
+    "## 16.5 (Опционально) CeleryExecutor + Redis\n",
+    "\n",
+    "В сервисах `airflow-scheduler`/`airflow-webserver` (раздел `environment:`) добавим:\n",
+    "\n",
+    "```yaml\n",
+    "    AIRFLOW__CORE__EXECUTOR: CeleryExecutor\n",
+    "    AIRFLOW__CELERY__BROKER_URL: redis://@redis:6379/0\n",
+    "```\n",
+    "\n",
+    "## 16.6 Инициализация Airflow\n",
     "\n",
     "```bash\n",
+    "cd ~/Rea/airflow\n",
     "docker compose up airflow-init\n",
     "```\n",
     "\n",
-    "## 12.5 Запуск Airflow\n",
+    "## 16.7 Запуск Airflow\n",
     "\n",
     "```bash\n",
     "docker compose up -d\n",
     "```\n",
     "\n",
-    "---\n",
+    "Вход в UI:\n",
     "\n",
-    "# 13. Вход в Airflow\n",
-    "\n",
-    "Открsnm браузер:\n",
-    "\n",
-    "```\n",
+    "```text\n",
     "http://localhost:8080\n",
     "```\n",
     "\n",
-    "Логин:\n",
+    "Логин/пароль по умолчанию:\n",
     "\n",
-    "```\n",
-    "airflow\n",
-    "```\n",
-    "\n",
-    "Пароль:\n",
-    "\n",
-    "```\n",
-    "airflow\n",
+    "```text\n",
+    "airflow / airflow\n",
     "```\n",
     "\n",
-    "---\n",
+    "Остановить:\n",
     "\n",
-    "# 14. Запуск VS Code с проектом\n",
+    "```bash\n",
+    "cd ~/Rea/airflow\n",
+    "docker compose down\n",
+    "```\n",
+    "\n",
+    "***\n",
+    "\n",
+    "# 17. Работа с VS Code и Jupyter\n",
+    "\n",
+    "## Открыть проект\n",
     "\n",
     "```bash\n",
     "cd ~/Rea\n",
@@ -366,40 +603,14 @@
     "code .\n",
     "```\n",
     "\n",
-    "---\n",
+    "## Создать ноутбук и выбрать ядро\n",
     "\n",
-    "# 15. Работа с Jupyter в VS Code\n",
+    "- `Ctrl+Shift+P`\n",
+    "- `Jupyter: Create New Blank Notebook`\n",
+    "- В правом верхнем углу выбрать Kernel → `Python (rea)` \n",
     "\n",
-    "* `Ctrl+Shift+P`\n",
-    "* `Jupyter: Create New Blank Notebook`\n",
-    "* Kernel → **Python (rea)**\n",
-    "\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 16. Как это всё запускать потом \n",
-    "\n",
-    "### Airflow:\n",
-    "\n",
-    "```bash\n",
-    "cd Rea/airflow\n",
-    "docker compose up -d\n",
-    "```\n",
-    "\n",
-    "### Остановить Airflow:\n",
-    "\n",
-    "```bash\n",
-    "docker compose down\n",
-    "```\n",
-    "\n",
-    "---\n"
+    "***\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5aa6db7c",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
